Reetan.Nayak Dev 25/force-app/main/default/objects/Job__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>BirthDate</label>
    <type>DateTime</type>
</CustomField>