Reetan.Nayak Dev 25/force-app/main/default/objects/Job__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>&quot;HI&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>/.</label>
    <type>Text</type>
</CustomField>