Reetan.Nayak Dev 25/force-app/main/default/objects/Job__c/fields/gyug__c.field-meta.xml
<CustomField>
    <fullName>gyug__c</fullName>
    <externalId>true</externalId>
    <label>gyug</label>
    <length>12</length>
    <type>Text</type>
</CustomField>