Reetan.Nayak Dev 25/force-app/main/default/objects/Job__c/fields/hbjs__c.field-meta.xml
<CustomField>
    <fullName>hbjs__c</fullName>
    <externalId>true</externalId>
    <label>hbjs</label>
    <length>16</length>
    <type>Text</type>
</CustomField>