Reetan.Nayak Dev 25/force-app/main/default/objects/Job__c/fields/uigsyh__c.field-meta.xml
<CustomField>
    <fullName>uigsyh__c</fullName>
    <externalId>true</externalId>
    <label>uigsyh</label>
    <length>89</length>
    <type>Text</type>
</CustomField>